# image-transfer-daemon

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml  spring_transfer_config.yaml
scripts/: check-environment.py  daemon.bat  debug-daemon.py  debug-running-service.py  debug_service.py  install-service.bat  install-service.py  manage-daemon.ps1  run-daemon-conda.bat
src/image_transfer/: __init__.py  __main__.py  cli.py  config.py  daemon.py  handler.py  paths.py  reliable_transfer.py  scheduler.py  transfer.py
src/image_transfer/services/: __init__.py  launchd.py  systemd.py  windows_service.py  windows_service_wrapper.py
