[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-transfer"
version = "0.1.0"
description = "Rsync-based image transfer with NIGHT-aware paths and pattern filtering"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "pytz>=2023.3"
]

[project.scripts]
image-transfer = "image_transfer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
